Attempt to fix Leavepaint spacing.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,6 +10,8 @@ body,html{
 
 	z-index: 100;
 	height: 30px;
+	padding-top: 10px;
+	padding-bottom: 10px;
 	width: 100%;
 	position: fixed;
 	overflow: hidden;
